# geo3-ip-webserver

./: .env.example  .gitignore  repo.bundle
.github/: copilot-instructions.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/: pyproject.toml
backend/alembic/versions/: 0001_core_models.py
backend/app/: admin_store.py  main.py  settings.py
backend/app/access/: decision.py  geofence.py  ip_rules.py
backend/app/admin/repositories/: __init__.py  geofence_repository.py  ip_rule_repository.py  serialization.py  site_repository.py  site_user_repository.py
backend/app/artifacts/: __init__.py  storage.py  storage_factory.py  worker.py
backend/app/audit/: service.py
backend/app/auth/: admin_deps.py  deps.py  jwt.py  permissions.py  security.py  store.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/models/: __init__.py  artifact.py  audit.py  geofence.py  ip_geo_cache.py  ip_rule.py  site.py  site_user.py  user.py
backend/app/geoip/: cache.py  service.py
backend/app/middleware/: access_gate.py
backend/app/routers/: audit.py  auth.py  geofences.py  ip_rules.py  site_users.py  sites.py
backend/app/templates/: block.html
backend/migrations/: env.py
backend/migrations/versions/: 0001_core_tables.py  0002_enable_postgis.py
backend/tests/: conftest.py  test_access_gate.py  test_access_geofence.py  test_access_ip_rules.py  test_admin_sites.py  test_artifacts.py  test_audit.py  test_auth.py  test_geoip_cache.py  test_health.py  test_models.py
frontend/: package.json
frontend/src/: App.tsx  (+1 more)
infra/: docker-compose.yml
(+13 files in other folders)
