[project]
name = "geo3-ip-webserver"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "httpx>=0.27.0",
  "SQLAlchemy>=2.0.25",
  "alembic>=1.13.0",
  "geoalchemy2>=0.15.2",
]

[tool.setuptools]
packages = ["app", "alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
